Changes the label methods in ToolPageContext to insert nbsp if there's white space in the first 5 letters to prevent aggressive wrapping in the browsers.

--- a/tool-ui/src/main/webapp/style/cms.less
+++ b/tool-ui/src/main/webapp/style/cms.less
@@ -1163,10 +1163,6 @@ table.links.table-striped {
     white-space: nowrap;
 }
 
-.typeLabel {
-    white-space: nowrap;
-}
-
 .widget {
     background-color: @color-background;
     .border-radius(5px);
